edition = "2023";

package ec1.guest.v1;

service AgentService {
	rpc ExecuteCommand(stream ExecuteCommandRequest) returns (stream ExecuteCommandResponse);
}

message ExecuteCommandRequest {
	string          executable = 1;  // required
	repeated string args       = 2;  // required
	bytes           stdin      = 3;  // optional
	bytes           env        = 4;  // optional
}

message ExecuteCommandResponse {
	bytes stdout    = 1;
	bytes stderr    = 2;
	int32 exit_code = 3;
	bool  done      = 4;
}
